--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Bitcount+Grid+Single:wght@100..900&display=swap');
 @layer base {
   body {
     @apply bg-gray-900 m-0;
+    
   }
 
   #root {
